<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- DONE: Add necessary string values -->
    <string name="avatar">Avatar</string>
    <string name="correspondence_address">Correspondence Address</string>
    <string name="default_address">Address</string>
    <string name="edit_address_line_1">Address line 1 </string>
    <string name="edit_address_line_2">Address line 2 </string>
    <string name="edit_city">City </string>
    <string name="edit_zip">Zip </string>
    <string name="election_date">Election Date</string>
    <string name="error_require_location_permission">To get representatives by using location, you need to enable location permission</string>
    <string name="facebook">Facebook</string>
    <string name="find_my_representatives">FIND MY REPRESENTATIVES</string>
    <string name="find_my_representatives_btn">FIND MY REPRESENTATIVES</string>
    <string name="follow_btn">follow election</string>
    <string name="follow_election">Follow Election</string>
    <string name="head_saved_elections">Saved Elections</string>
    <string name="header_representative_search">Representative Search</string>
    <string name="header_upcoming_elections">Upcoming Elections</string>
    <string name="my_representatives">Search Results:</string>
    <string name="status_error">Error when retrieving representatives</string>
    <string name="status_loading">Loading…</string>
    <string name="twitter">Twitter</string>
    <string name="unfollow_btn">unfollow election</string>
    <string name="upcoming_elections">UPCOMING ELECTIONS</string>
    <string name="use_my_location_btn">USE GPS TO FIND MY ADDRESS</string>
    <string name="visit_website">Visit website</string>
    <string name="website">Website</string>
    <string name="default_image_description">Voting</string>
    <string name="icon_api_status">Icon to indicate API status</string>
    <string name="txt_office_name">President of the US</string>
    <string name="txt_candidate_name">Mike</string>
    <string name="api_status_indicator">API Status indicator</string>
    <string name="error_invalid_address">Invalid Address</string>
    <string name="lbl_election_location">Election Location</string>
    <string name="election_ballot_information">Ballot Information</string>
    <string name="election_information">Election Information</string>
    <string name="placeholder_election_date">28 December 2022</string>
    <string name="search_form">Search Form</string>
    <string name="api_status_upcoming">API Status indicator for upcoming elections</string>
    <string name="txt_party_name">Party</string>

</resources>
