<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <!-- DONE: Add data binding node -->
    <data>

        <!-- Representative -->
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative"
            />

    </data>

    <!-- Constraint Layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        >

        <!-- Candidate's Avatar -->
        <ImageView
            android:id="@+id/representativePhoto"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="4dp"
            android:contentDescription="@string/avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImage="@{representative.official.photoUrl}"
            />

        <!-- Office Name -->
        <TextView
            android:id="@+id/text_office_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="@{representative.office.name}"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/representativePhoto"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txt_office_name"
            />

        <!-- Candidate Name -->
        <TextView
            android:id="@+id/text_official_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="@{representative.official.name}"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/wwwIcon"
            app:layout_constraintStart_toEndOf="@id/representativePhoto"
            app:layout_constraintTop_toBottomOf="@id/text_office_name"
            tools:text="@string/txt_candidate_name"
            />

        <!-- Party -->
        <TextView
            android:id="@+id/text_official_party"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="@{representative.official.party}"
            android:textColor="@color/colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/wwwIcon"
            app:layout_constraintStart_toEndOf="@id/representativePhoto"
            app:layout_constraintTop_toBottomOf="@id/text_official_name"
            tools:text="Party"
            />

        <!-- Icon: Website -->
        <ImageView
            android:id="@+id/wwwIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/website"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/facebookIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_www"
            />

        <!-- Icon: Facebook -->
        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/twitterIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_facebook"
            />

        <!-- Icon: Twitter -->
        <ImageView
            android:id="@+id/twitterIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/twitter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_twitter"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
