<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="election"
            type="com.example.android.politicalpreparedness.network.models.Election"
            />

        <variable
            name="voterInfoViewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/size_sixteen"
        tools:context="com.example.android.politicalpreparedness.MainActivity"
        >

        <!-- Main Heading: Election Information -->
        <TextView
            android:id="@+id/lbl_election_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_twenty_four"
            android:text="@string/election_information"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <!-- Sub-Heading: Election Date -->
        <TextView
            android:id="@+id/state_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_thirty_six"
            android:text="@string/election_date"
            android:textAllCaps="true"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/lbl_election_info"
            />

        <!-- TextView: Election Date -->
        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_eight"
            android:textSize="21sp"
            app:day="@{voterInfoViewModel.election.electionDay}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            tools:text="@string/placeholder_election_date"
            />

        <!-- Divider -->
        <View
            android:id="@+id/div_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_one"
            android:layout_marginTop="21dp"
            android:background="@color/colorPrimaryLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            tools:layout_editor_absoluteY="16dp"
            />

        <!-- Sub-Heading: Election Location -->
        <TextView
            android:id="@+id/lbl_locations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_twenty"
            android:text="@string/lbl_election_location"
            android:textAllCaps="true"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/div_date"
            />

        <!-- Weblink: Election Location -->
        <TextView
            android:id="@+id/state_locations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_eight"
            android:onClick="@{() -> voterInfoViewModel.navigateToUrl(voterInfoViewModel.administrationBody.votingLocationFinderUrl)}"
            android:text="@string/visit_website"
            android:textColor="@color/colorURL"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/lbl_locations"
            />

        <!-- Divider -->
        <View
            android:id="@+id/div_location"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_one"
            android:layout_marginTop="@dimen/text_twenty_one"
            android:background="@color/colorPrimaryLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            tools:layout_editor_absoluteY="@dimen/text_sixteen"
            />

        <!-- Sub-Heading: Ballot Information -->
        <TextView
            android:id="@+id/lbl_ballot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_twenty_one"
            android:text="@string/election_ballot_information"
            android:textAllCaps="true"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/div_location"
            />

        <!-- Weblink: Ballot Information -->
        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_eight"
            android:onClick="@{() -> voterInfoViewModel.navigateToUrl(voterInfoViewModel.administrationBody.ballotInfoUrl)}"
            android:text="@string/visit_website"
            android:textColor="@color/colorURL"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/lbl_ballot"
            />

        <!-- API Status -->
        <ImageView
            android:id="@+id/image_api_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/api_status_indicator"
            app:civicsApiStatus="@{voterInfoViewModel.apiStatus}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <!-- Button: Follow/un-follow Election-->
        <Button
            android:id="@+id/follow_election_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_zero"
            android:layout_margin="@dimen/size_twenty_four"
            android:backgroundTint="@color/colorPrimary"
            android:enabled="@{voterInfoViewModel.election != null}"
            android:onClick="@{() -> voterInfoViewModel.toggleFollowElection()}"
            android:text="@string/follow_election"
            android:textColor="@color/white"
            app:followOrUnfollow="@{voterInfoViewModel.isElectionSaved}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
